Fixed issue with size and wrong font being selected

--- a/Constructcode.Web/App/styles/pages/front-page.scss
+++ b/Constructcode.Web/App/styles/pages/front-page.scss
@@ -15,7 +15,7 @@ $category-color: #847b79;
             font-size: 1em;
         }
         .introduction {
-            font-size: 1.1em;
+            font-size: 1.2em;
             text-align: justify;
             margin-left: 30px;
             margin-right: 30px;
@@ -27,12 +27,11 @@ $category-color: #847b79;
                 margin-top: 15px;
                 text-align: center;
                 .category-title {
-                    font-size: 1.2em;
+                    font-size: 0.8em;
                     display: inline;
                     background-color: #eeedea;
                     border-radius: 4px;
                     padding: 0 12px;
-                    font-size: 14px;
                     display: inline-block;
                     margin-right: 10px;
                     a {
